--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<description>Servicio cuentas bancarias depositos</description>
 	<properties>
 		<java.version>11</java.version>
+		<spring-cloud.version>2021.0.2</spring-cloud.version>
 	</properties>
 	<dependencies>
 	    <dependency>
@@ -51,8 +52,36 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+	      <groupId>org.springframework.cloud</groupId>
+	      <artifactId>spring-cloud-starter-config</artifactId>
+	    </dependency>
+		<dependency>
+		    <groupId>org.springframework.cloud</groupId>
+		    <artifactId>spring-cloud-starter-bootstrap</artifactId>
+		</dependency>
+		 <dependency>
+	      <groupId>org.springframework.cloud</groupId>
+	      <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+	    </dependency>
+	    <dependency>
+		    <groupId>com.sun.jersey.contribs</groupId>
+		    <artifactId>jersey-apache-client4</artifactId>
+		    <version>1.19.4</version>
+		</dependency>
 	</dependencies>
-
+    <dependencyManagement>
+       <dependencies>
+	      <dependency>
+	        <groupId>org.springframework.cloud</groupId>
+	        <artifactId>spring-cloud-dependencies</artifactId>
+	        <version>${spring-cloud.version}</version>
+	        <type>pom</type>
+	        <scope>import</scope>
+	      </dependency>
+	    </dependencies>
+	 </dependencyManagement>
 	<build>
 		<plugins>
 			<plugin>
